--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/x-icon" href="./imgs/favicon/favicon.ico">
     <link rel="icon" href="./imgs/favicon/favicon.ico" />
     <link rel="stylesheet" href="./style/index.css">
-    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
     <script src="./scripts/login.js"></script>
     <link rel="stylesheet" href="./style/style.css">
     <title>Harsh, welcomes you</title>
