--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="items m-3 mr-10">
                 <ul class="flex   flex-wrap  align-middle p-1 space-x-6">
                     <li class="text-lg  py-2 hover:border-b-2  hover:border-blue-500"><a href="/index.html">Home</a></li>
-                    <li class="text-lg  py-2 hover:border-b-2  hover:border-blue-500"><a href="#About">About</a></li>
+                    <li class="text-lg hidden md:inline-block lg:inline-block  py-2 hover:border-b-2  hover:border-blue-500"><a href="#About">About</a></li>
                     <li class="text-lg  py-2 hover:border-b-2  hover:border-blue-500"><a href="#Projects">Projects</a></li>
                     <li class="text-lg  py-2 hover:border-b-2  hover:border-blue-500"><a href="#Contact">Contact</a></li>
                 </ul>
@@ -65,5 +65,8 @@
             </div>
         </div>      
     </article>
+    <section>
+
+    </section>
 </body>
 </html>
