--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
         </div>      
         <div class="introPhoto hidden md:inline-block lg:inline-block md:w-1/3 lg:w-4/12 ">
-            <img class="hover:scale-125 duration-300" src="./imgs/introPhoto.png" alt="boy coding">
+            <img class="hover:scale-125 fadein1 duration-300" src="./imgs/introPhoto.png" alt="boy coding">
         </div>
     </section>
 
