--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" href="./imgs/favicon/favicon.ico" />
     <link rel="stylesheet" href="./style/index.css">
     <!-- <script src="https://cdn.tailwindcss.com"></script> -->
-    <script src="./scripts/login.js"></script>
+    <!-- <script src="./scripts/login.js"></script> -->
     <link rel="stylesheet" href="./style/style.css">
     <title>Harsh, welcomes you</title>
 </head>
