fixed issues with tab width

--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
     <link rel="icon" href="./imgs/favicon/favicon.ico" />
     <link rel="stylesheet" href="./style/index.css">
     <!-- <script src="https://cdn.tailwindcss.com"></script> -->
-    <!-- <script src="./scripts/login.js"></script> -->
+    <script src="./scripts/login.js"></script>
     <link rel="stylesheet" href="./style/style.css">
     <title>Harsh, welcomes you</title>
 </head>
 <body class="scroll-smooth bg-black text-white ">
 
     <!-- navbar -->
-    <div  class="nav flex justify-center sticky top-0 z-50 w-full h-full">
+    <div class="nav flex justify-center sticky top-0 z-50 w-full h-full">
         <nav class="bg-black text-white flex flex-row lg:flex justify-center w-full h-full flex-wrap">
             <div class="hidden md:inline lg:inline  icon m-3">
                 <button class="hidden md:inline lg:inline" onclick="Inc()"><img class="md:w-12 lg:w-12 m-1 logo transition-all duration-900 " src="./imgs/coding logo.svg" alt=""></button>
             </div>
             <div class="items m-3 mr-10">
                 <ul class="flex   flex-wrap  align-middle p-1 space-x-6">
-                    <li class="text-lg  py-2 hover:border-b-2  hover:border-blue-500"><a href="/index.html">Home</a></li>
+                    <li class="text-lg  py-2 hover:border-b-2  hover:border-blue-500"><a href="#Home">Home</a></li>
                     <li class="text-lg hidden md:inline-block lg:inline-block  py-2 hover:border-b-2  hover:border-blue-500"><a href="#About">About</a></li>
                     <li class="text-lg  py-2 hover:border-b-2  hover:border-blue-500"><a href="#Projects">Projects</a></li>
                     <li class="text-lg  py-2 hover:border-b-2  hover:border-blue-500"><a href="#Contact">Contact</a></li>
@@ -34,8 +34,8 @@
     </div>
 
     <!-- landing content- Home -->
-    <section  class="flex p-10 justify-center lg:mt-4 h-max">
-        <div class="intro ml-5 md:w-1/2 md:inline-block lg:w-5/12 inline-block h-auto">
+    <section id="Home"  class="flex p-8 md:justify-center justify-start lg:justify-center lg:mt-4 h-max">
+        <div class="intro md:w-1/2 md:inline-block lg:w-5/12 inline-block h-auto">
             <div class="message lg:m-9">
                 <span class="block w-max hover:scale-125 duration-300">
                     <span  class="text-blue-700  text-7xl lg:text-8xl">H</span>
@@ -64,33 +64,39 @@
                 <p class="p-2 text-5">Harsh is a student of computer engineering , he is 17 years old and has fair grip over programming and problem solving , he is able to learn new languages to solve a real life problems.He currently knows: HTML, CSS, Java, php, vb.net, C, C++, python, machine learning with python and he is currently learning javascript and andriod.</p>
             </div>
         </div>      
-    </article>
+    </article><br><br><br>
+
+    <!-- Projects -->
     <section>
-        <div id="Projects" class="flex justify-center lg:space-x-7 w-full h-full p-5 flex-wrap flex-col md:flex-col lg:flex-row ">
-            <div class="item  hover:scale-105 mt-9 duration-200 lg:w-1/4">
+        <div id="Projects" class="flex  justify-center lg:space-x-7 w-full h-full p-5 flex-wrap flex-col md:flex-col lg:flex-row ">
+            <div class="item border-y-4 border-white p-5  hover:border-gray-400  mt-9 duration-200 md:w-[80%] md:mx-auto   lg:w-1/4">
                 <img class="w-full m-auto" src="imgs/idcard.jpg" alt="Id card image">
-                
                 <h3 class="py-5 font-extrabold">Id card Project</h3>
-                <p class="py-5">Implemented a website for adding new students in department,getting information , requesting and accepting id cards information.Implemented with PHP and mySQL. </p>
-                <a href="https://github.com/fake-harsh/id_card_project" class="text-blue-700 font-light text-lg" target="_blank">Github</a>
+                <p class="py-5 h-[40%]">Implemented a website for adding new students in department,getting information , requesting and accepting id cards information.Implemented with PHP and mySQL. </p>
+                <a href="https://github.com/fake-harsh/id_card_project" class="text-blue-700 block mb-5  font-light text-lg" target="_blank">Github</a>
             </div>
 
-            <div class="item  hover:scale-105 mt-9 duration-200 lg:w-1/4">
+            <div class="item border-y-4 border-white p-5  hover:border-gray-400  mt-9 duration-200 md:w-[80%] md:mx-auto   lg:w-1/4">
                 <img class="m-auto" src="imgs/testcase.jpg" alt="Id card image">
                 <h3 class="py-5 font-extrabold">Test Case Validator</h3>
-                <p class="py-5">Implemented a software for college student that checks code of every student with multiple test cases given by professor to software and produce output on console as well as in an excel file.This solution is made with python.</p>
-                <a href="https://github.com/fake-harsh/id_card_project" class="text-blue-700 font-light text-lg" target="_blank">Github</a>
-            </div>
+                <p class="py-5 h-[40%]">Implemented a software for college student that checks code of every student with multiple test cases given by professor to software and produce output on console as well as in an excel file.This solution is made with python.</p>
+                <a href="https://github.com/fake-harsh/id_card_project" class="text-blue-700 block mb-5  font-light text-lg" target="_blank">Github</a>
+            </div>  
 
-            <div class="item  hover:scale-105 mt-9 duration-200 lg:w-1/4">
+            <div class="item border-y-4 border-white p-5  hover:border-gray-400  mt-9 duration-200 md:w-[80%] md:mx-auto   lg:w-1/4">
                 <img class="m-auto" src="imgs/digit identification.jpg" alt="Digit identification">
                 <h3 class="py-5 font-extrabold">Gujarati Digit Identification</h3>
-                <p class="py-5">Implemented a software for college student that checks code of every student with multiple test cases given by professor to software and produce output on console as well as in an excel file.This solution is made with python.</p>
-                <a href="https://github.com/fake-harsh/id_card_project" class="text-blue-700 font-light text-lg" target="_blank">Github</a>
+                <p class="py-5 h-[40%]">Implemented a software for college student that checks code of every student with multiple test cases given by professor to software and produce output on console as well as in an excel file.This solution is made with python.</p>
+                <a href="https://github.com/fake-harsh/id_card_project" class="text-blue-700 block mb-5  font-light text-lg" target="_blank">Github</a>
             </div>
 
-            
+            </div>
         </div>
     </section>
+
+    <!-- Contact -->
+    <footer id="Contact" class="">
+
+    </footer>
 </body>
 </html>
