--- a/index.html
+++ b/index.html
@@ -73,14 +73,14 @@
                 <img class="w-full m-auto" src="imgs/idcard.jpg" alt="Id card image">
                 <h3 class="py-5 font-extrabold">Id card Project</h3>
                 <p class="py-5 h-[40%]">Implemented a website for adding new students in department,getting information , requesting and accepting id cards information.Implemented with PHP and mySQL. </p>
-                <a href="https://github.com/fake-harsh/id_card_project" class="text-blue-700 block mb-5  font-light text-lg" target="_blank">Github</a>
+                <a href="https://github.com/fake-harsh/id_card_project" class="text-blue-700 mb-5  font-light text-lg" target="_blank">Github</a>
             </div>
 
             <div class="item border-y-4 border-white p-5 hover:scale-[103%]  hover:border-gray-400  mt-9 duration-200 w-11/12 m-auto lg:m-0  lg:w-1/4">
                 <img class="m-auto" src="imgs/testcase.jpg" alt="Id card image">
                 <h3 class="py-5 font-extrabold">Test Case Validator</h3>
                 <p class="py-5 h-[40%]">Implemented a software for college student that checks code of every student with multiple test cases given by professor to software and produce output on console as well as in an excel file.This solution is made with python.</p>
-                <a href="https://github.com/fake-harsh/id_card_project" class="text-blue-700 block mb-5  font-light text-lg" target="_blank">Github</a>
+                <a href="https://github.com/fake-harsh/id_card_project" class="text-blue-700  mb-5  font-light text-lg" target="_blank">Github</a>
             </div>  
 
             <div class="item border-y-4 border-white p-5 hover:scale-[103%]  hover:border-gray-400  mt-9 duration-200 w-11/12 m-auto lg:m-0  lg:w-1/4">
