--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="./style/style.css">
     <title>Harsh, welcomes you</title>
 </head>
-<body class="scroll-smooth bg-black text-white ">
+<body class="scroll-smooth bg-black text-white " onload="myFunction()">
 
     <!-- navbar -->
     <div class="nav flex justify-center sticky top-0 z-50 w-full h-full">
@@ -24,10 +24,11 @@
             </div>
             <div class="items m-3 mr-10">
                 <ul class="flex   flex-wrap  align-middle p-1 space-x-6">
-                    <li class="text-lg  py-2 hover:border-b-2  hover:border-blue-500"><a href="#Home">Home</a></li>
-                    <li class="text-lg hidden md:inline-block lg:inline-block  py-2 hover:border-b-2  hover:border-blue-500"><a href="#About">About</a></li>
-                    <li class="text-lg  py-2 hover:border-b-2  hover:border-blue-500"><a href="#Projects">Projects</a></li>
-                    <li class="text-lg  py-2 hover:border-b-2  hover:border-blue-500"><a href="#Contact">Contact</a></li>
+                    <li class="text-lg  py-2 hover:border-b-2  hover:border-blue-500"><a accesskey="h" href="#Home">Home</a></li>
+                    <li class="text-lg hidden md:inline-block lg:inline-block  py-2 hover:border-b-2 hover:border-blue-500"><a accesskey="a" href="#About">About</a></li>
+                    <li class="text-lg  py-2 hover:border-b-2  hover:border-blue-500"><a accesskey="p" href="#Projects">Projects</a></li>
+                    <li class="text-lg  py-2 hover:border-b-2  hover:border-blue-500"><a accesskey="c" href="#Contact">Contact</a></li>
+                    
                 </ul>
             </div>
         </nav>
