removed alert issue

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="./style/style.css">
     <title>Harsh, welcomes you</title>
 </head>
-<body class="scroll-smooth bg-black text-white " onload="myFunction()">
+<body class="scroll-smooth bg-black text-white ">
 
     <!-- navbar -->
     <div class="nav flex justify-center sticky top-0 z-50 w-full h-full">
