added pending msg in contact

--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
     </section>
 
     <!-- Contact -->
-    <footer id="Contact" class="">
-
+    <footer id="Contact" class="flex justify-center">
+        <h2 class="text-lg m-10">please note that contact page is left pending !</h2>
     </footer>
 </body>
 </html>
