--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body id="body" class="scroll-smooth bg-black text-white ">
 
     <!-- navbar -->
-    <div id="nav" class="nav flex justify-center sticky top-0 z-50 w-full h-full">
+    <div id="nav" class="bg-inherit nav flex justify-center sticky top-0 z-50 w-full h-full">
         <nav class="flex flex-row lg:flex justify-center w-full h-full flex-wrap">
             <div class="inline md:inline lg:inline icon m-3">
                 <button class="w-12 h-max m-1 mb-0" id="btnclr" onclick="swap()"><img class="m-1 logo" src="./imgs/coding logo.svg" alt=""></button>
@@ -62,7 +62,7 @@
         </div>
         <div class="ml-5 my-[7%] md:w-1/2 md:inline-block lg:w-5/12 inline-block h-auto">
             <div class="message hover:scale-110 duration-300 lg:m-9 ">
-                <p class="p-2 text-5">Harsh is a student of computer engineering , he is 17 years old and has fair grip over programming and problem solving , he is able to learn new languages to solve a real life problems.He currently knows: HTML, CSS, Java, php, vb.net, C, C++, python, machine learning with python and he is currently learning javascript and andriod.</p>
+                <p class="p-4 text-5">Harsh is a student of computer engineering , he is 17 years old and has fair grip over programming and problem solving , he is able to learn new languages to solve a real life problems.He currently knows: HTML, CSS, Java, php, vb.net, C, C++, python, machine learning with python and he is currently learning javascript and andriod.</p>
             </div>
         </div>      
     </article><br><br><br>
