fixed hover issue on mobile

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body id="body" class="scroll-smooth bg-black text-white ">
 
     <!-- navbar -->
-    <div id="nav" class="bg-inherit nav flex justify-center sticky top-0 z-50 w-full h-full">
+    <div id="nav" class="bg-black nav flex justify-center sticky top-0 z-50 w-full h-full">
         <nav class="flex flex-row lg:flex justify-center w-full h-full flex-wrap">
             <div class="inline md:inline lg:inline icon m-3">
                 <button class="w-12 h-max m-1 mb-0" id="btnclr" onclick="swap()"><img class="m-1 logo" src="./imgs/coding logo.svg" alt=""></button>
