--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <button class="w-12 h-max m-1 mb-0" id="btnclr" onclick="swap()"><img class="m-1 logo" src="./imgs/coding logo.svg" alt=""></button>
             </div>
             <div class="flex justify-center items m-3 mr-10">
-                <ul class="flex justify-center  flex-wrap  align-middle p-1 space-x-6">
+                <ul class="flex justify-center  flex-wrap  align-middle p-1 space-x-4 md:space-x-6 lg:space-x-6">
                     <li class="text-lg  py-2 hover:border-b-2  hover:border-blue-500"><a accesskey="h" href="#Home">Home</a></li>
                     <li class="text-lg hidden md:inline-block lg:inline-block  py-2 hover:border-b-2 hover:border-blue-500"><a accesskey="a" href="#About">About</a></li>
                     <li class="text-lg  py-2 hover:border-b-2  hover:border-blue-500"><a accesskey="p" href="#Projects">Projects</a></li>
