fixed navbar width and initial color trasparent

--- a/index.html
+++ b/index.html
@@ -60,15 +60,17 @@
         <div class="hidden md:inline-block my-[7%] lg:inline-block md:w-1/4 lg:w-2/12 ">
             <img class="hover:scale-125 duration-300" src="./imgs/aboutphoto.png" alt="boy coding">
         </div>
-        <div class="ml-5 my-[7%] md:w-1/2 md:inline-block lg:w-5/12 inline-block h-auto">
-            <div class="message hover:scale-110 duration-300 lg:m-9 ">
-                <p class="p-4 text-5">Harsh is a student of computer engineering , he is 17 years old and has fair grip over programming and problem solving , he is able to learn new languages to solve a real life problems.He currently knows: HTML, CSS, Java, php, vb.net, C, C++, python, machine learning with python and he is currently learning javascript and andriod.</p>
+        <div class="ml-5 my-[7%] md:w-1/2  md:inline-block lg:w-5/12 inline-block h-auto">
+            <div class="message lg:m-9 ">
+                <h2 class="p-4 hover:text-4xl duration-200 text-3xl">Hola ! Great People</h2>
+                <p class="p-4 hover:scale-105 duration-200 text-lg">Harsh is student of Computer Engineering currently pursuing his last year of diploma from Government Polytechnic, Porbandar.He has fair skills on web-development and algorithm optimization.He has achived notable results throughout his acedamic carrier. He wants to apply the education he has grasp over years into real life problems to benefit the organization and save time and efforts of people.</p>
+                <p class="p-4 hover:scale-105 duration-200 text-lg">okay that's my time ! See you again !</p>
             </div>
         </div>      
     </article><br><br><br>
 
     <!-- Projects -->
-    <section>
+    <section> 
         <div id="Projects" class="flex  justify-center lg:space-x-7 w-full h-full p-5 flex-wrap flex-col md:flex-col lg:flex-row ">
             <div class="item border-y-4 border-white p-5 hover:scale-[103%]  hover:border-gray-400  mt-9 duration-200 w-11/12 m-auto lg:m-0 lg:w-1/4">
                 <img class="w-full m-auto" src="imgs/idcard.jpg" alt="Id card image">
