--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
         <div class="ml-5 my-[7%] md:w-1/2  md:inline-block lg:w-5/12 inline-block h-auto">
             <div class="message lg:m-9 ">
                 <h2 class="p-4 hover:text-4xl duration-200 text-3xl">Hola ! Great People</h2>
-                <p class="p-4 hover:scale-105 duration-200 text-lg">Harsh is student of Computer Engineering currently pursuing his last year of diploma from Government Polytechnic, Porbandar.He has fair skills on web-development and algorithm optimization.He has achived notable results throughout his acedamic carrier. He wants to apply the education he has grasp over years into real life problems to benefit the organization and save time and efforts of people.</p>
-                <p class="p-4 hover:scale-105 duration-200 text-lg">okay that's my time ! See you again !</p>
+                <p class="p-4 hover: duration-200 text-lg">Harsh is student of Computer Engineering currently pursuing his last year of diploma from Government Polytechnic, Porbandar.He has fair skills on web-development and algorithm optimization.He has achived notable results throughout his acedamic carrier. He wants to apply the education he has grasp over years into real life problems to benefit the organization and save time and efforts of people.</p>
+                <p class="p-4 hover:text-xl duration-200 text-lg">okay that's my time ! See you again !</p>
             </div>
         </div>      
     </article><br><br><br>
