changed content of ml project

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <div class="item border-y-4 border-white p-5 hover:scale-[103%]  hover:border-gray-400  mt-9 duration-200 w-11/12 m-auto lg:m-0  lg:w-1/4">
                 <img class="m-auto" src="imgs/digit identification.jpg" alt="Digit identification">
                 <h3 class="py-5 font-extrabold">Gujarati Digit Identification</h3>
-                <p class="py-5 h-[40%]">Implemented a software for college student that checks code of every student with multiple test cases given by professor to software and produce output on console as well as in an excel file.This solution is made with python.</p>
+                <p class="py-5 h-[40%]">Final year project in diploma engineering that is based on machine learning model that can classify the images of Gujrati digits.Implemented with python</p>
             </div>
 
 
