--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <!-- Projects -->
     <section> 
         <div id="Projects" class="flex  justify-center lg:space-x-7 w-full h-full p-5 flex-wrap flex-col md:flex-col lg:flex-row ">
-            <div class="item border-y-4 border-white p-5 hover:scale-[103%]  hover:border-blue-700  mt-9 duration-200 w-11/12 m-auto lg:m-0 lg:w-1/4">
+            <div class="item border-y-4 border-white p-5 hover:scale-[103%]  hover:border-blue-700  mt-9 duration-200 w-11/12 m-auto lg:m-0 lg:w-1/4    ">
                 <img class="w-full m-auto" src="imgs/idcard.jpg" alt="Id card image">
                 <h3 class="py-5 font-extrabold">Id card Project</h3>
                 <p class="py-5 h-[40%]">Implemented a website for adding new students in department,getting information , requesting and accepting id cards information.Implemented with PHP and mySQL. </p>
@@ -105,7 +105,7 @@
     <footer id="Contact" class="m-10 ">
         <p class="text-center m-5 text-xl md:text-2xl lg:text-2xl">Feel free to contact me</p>
         <div class="items flex justify-center w-full h-max">
-            <a href="https://www.instagram.com/fake_harrsh/" target="_blank" class="m-5">
+            <a href="https://www.instagram.com/harsh_thinkks/" target="_blank" class="m-5">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="w-5 h-5 hover:scale-150 duration-200"><!--! Font Awesome Pro 6.0.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path fill="currentColor" d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"/></svg>
             </a>
     
