--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="ml-5 my-[7%] md:w-1/2  md:inline-block lg:w-5/12 inline-block h-auto">
             <div class="message lg:m-9 ">
                 <h2 class="p-4 lg:hover:text-4xl duration-200 text-3xl">Hola ! Great People</h2>
-                <p class="p-4  lg:hover:scale-[105%] lg:hover:ml-3 duration-200 text-base">Harsh is student of Computer Engineering currently pursuing his last year of diploma from Government Polytechnic, Porbandar.He has fair skills on web-development and algorithm optimization.He has achived notable results throughout his acedamic carrier. He wants to apply the education he has grasp over years into real life problems to benefit the organization and save time and efforts of people.</p>
+                <p class="p-4  lg:hover:scale-[105%] lg:hover:ml-3 duration-200 text-base">Harsh is student of Computer Engineering currently pursuing his last year of diploma from Government Polytechnic, Porbandar.He has fair skills on web-development and algorithm optimization.He has achieved notable results throughout his acedamic carrier. He wants to apply the education he has grasp over years into real life problems to benefit the organization and save time and efforts of people.</p>
                 <p class="p-4 lg:hover:text-xl duration-200 text-lg">okay that's my time ! See you again !</p>
             </div>
         </div>      
@@ -75,20 +75,21 @@
                 <img class="w-full m-auto" src="imgs/idcard.jpg" alt="Id card image">
                 <h3 class="py-5 font-extrabold">Id card Project</h3>
                 <p class="py-5 h-[40%]">Implemented a website for adding new students in department,getting information , requesting and accepting id cards information.Implemented with PHP and mySQL. </p>
-                <a href="https://github.com/fake-harsh/id_card_project" class="text-blue-700 mb-5  font-light text-lg" target="_blank">Github</a>
+                <a href="https://github.com/virtualharsh/id_card_project" class="text-blue-700 mb-5  font-light text-lg" target="_blank">Github</a>
             </div>
 
             <div class="item border-y-4 border-white p-5 hover:scale-[103%]  hover:border-blue-700  mt-9 duration-200 w-11/12 m-auto lg:m-0  lg:w-1/4">
                 <img class="m-auto" src="imgs/testcase.jpg" alt="Id card image">
                 <h3 class="py-5 font-extrabold">Test Case Validator</h3>
                 <p class="py-5 h-[40%]">Implemented a software for college student that checks code of every student with multiple test cases given by professor to software and produce output on console as well as in an excel file.This solution is made with python.</p>
-                <a href="https://github.com/fake-harsh/testcases-validator" class="text-blue-700  mb-5  font-light text-lg" target="_blank">Github</a>
+                <a href="https://github.com/virtualharsh/testcases-validator" class="text-blue-700  mb-5  font-light text-lg" target="_blank">Github</a>
             </div>  
 
             <div class="item border-y-4 border-white p-5 hover:scale-[103%]  hover:border-blue-700  mt-9 duration-200 w-11/12 m-auto lg:m-0  lg:w-1/4">
                 <img class="m-auto" src="imgs/digit identification.jpg" alt="Digit identification">
                 <h3 class="py-5 font-extrabold">Gujarati Digit Identification</h3>
                 <p class="py-5 h-[40%]">Final year project in diploma engineering that is based on machine learning model that can classify the images of Gujrati digits.Implemented with python</p>
+                <a href="https://github.com/virtualharsh/testcases-validator" class="text-blue-700  mb-5  font-light text-lg" target="_blank">Github</a>
             </div>
 
 
