--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             </div>  
 
             <div class="item border-y-4 border-white p-5 hover:scale-[103%]  hover:border-blue-700  mt-9 duration-200 w-11/12 m-auto lg:m-0  lg:w-1/4">
-                <img class="m-auto" src="imgs/digit identification.jpg" alt="Digit identification">
+                <img class="m-auto" loading="lazy" src="imgs/digit identification.jpg" alt="Digit identification">
                 <h3 class="py-5 font-extrabold">Gujarati Digit Identification</h3>
                 <p class="py-5 h-[40%]">Final year project in diploma engineering that is based on machine learning model that can classify the images of Gujrati digits.Implemented with python</p>
                 <a href="https://github.com/virtualharsh/gujarti-image-recognition" class="text-blue-700  mb-5  font-light text-lg" target="_blank">Github</a>
