modified instagram hyperlink to virtual_harrsh

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <h1  class="font-thin  inline text-6xl lg:text-7xl">onegra</h1>
                 </span>
                 <br><br>
-                <!-- <p class="p-2 text-5 changeclr para">Harsh is a student of computer engineering , he is 17 years old and has fair grip over programming and problem solving , he is able to learn new languages to solve a real life problems.He currently knows: HTML, CSS, Java, php, vb.net, C, C++, python, machine learning with python and he is currently learning javascript and andriod.</p> -->
+                <!-- <p class="p-2 text-5 changeclr para">Harsh is a student of computer engineering , he is 17 years old and has fair grip over programming and problem solving , he is able to learn new languages to solve a real life problems.He currently knows: HTML, CSS, Java, php, vb.net, C, C++, python, machine learning with python and he is currently learning javascript and android.</p> -->
             </div>
         </div>      
         <div class="introPhoto hidden md:inline-block lg:inline-block md:w-1/3 lg:w-4/12 ">
