--- a/index.html
+++ b/index.html
@@ -71,21 +71,21 @@
     <!-- Projects -->
     <section> 
         <div id="Projects" class="flex  justify-center lg:space-x-7 w-full h-full p-5 flex-wrap flex-col md:flex-col lg:flex-row ">
-            <div class="item border-y-4 border-white p-5 hover:scale-[103%]  hover:border-blue-700  mt-9 duration-200 w-11/12 m-auto lg:m-0 lg:w-1/4    ">
+            <div class="item border-y-4 border-white p-5 hover:scale-[103%]  mt-9 duration-200 w-11/12 m-auto lg:m-0 lg:w-1/4    ">
                 <img class="w-full m-auto" src="imgs/idcard.jpg" alt="Id card image">
                 <h3 class="py-5 font-extrabold">Id card Project</h3>
                 <p class="py-5 h-[40%]">Implemented a website for adding new students in department,getting information , requesting and accepting id cards information.Implemented with PHP and mySQL. </p>
                 <a href="https://github.com/virtualharsh/id_card_project" class="text-blue-700 mb-5  font-light text-lg" target="_blank">Github</a>
             </div>
 
-            <div class="item border-y-4 border-white p-5 hover:scale-[103%]  hover:border-blue-700  mt-9 duration-200 w-11/12 m-auto lg:m-0  lg:w-1/4">
+            <div class="item border-y-4 border-white p-5 hover:scale-[103%]  mt-9 duration-200 w-11/12 m-auto lg:m-0  lg:w-1/4">
                 <img class="m-auto" src="imgs/testcase.jpg" alt="Id card image">
                 <h3 class="py-5 font-extrabold">Test Case Validator</h3>
                 <p class="py-5 h-[40%]">Implemented a software for college student that checks code of every student with multiple test cases given by professor to software and produce output on console as well as in an excel file.This solution is made with python.</p>
                 <a href="https://github.com/virtualharsh/testcases-validator" class="text-blue-700  mb-5  font-light text-lg" target="_blank">Github</a>
             </div>  
 
-            <div class="item border-y-4 border-white p-5 hover:scale-[103%]  hover:border-blue-700  mt-9 duration-200 w-11/12 m-auto lg:m-0  lg:w-1/4">
+            <div class="item border-y-4 border-white p-5 hover:scale-[103%]   mt-9 duration-200 w-11/12 m-auto lg:m-0  lg:w-1/4">
                 <img class="m-auto" loading="lazy" src="imgs/digit identification.jpg" alt="Digit identification">
                 <h3 class="py-5 font-extrabold">Gujarati Digit Identification</h3>
                 <p class="py-5 h-[40%]">Final year project in diploma engineering that is based on machine learning model that can classify the images of Gujarati digits.Implemented with python</p>
