fixed about text mistakes

--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
         <div class="ml-5 my-[7%] md:w-1/2  md:inline-block lg:w-5/12 inline-block h-auto">
             <div class="message lg:m-9 ">
                 <h2 class="p-4 lg:hover:text-4xl duration-200 text-3xl">Hola ! Great People</h2>
-                <p class="p-4  lg:hover:scale-[105%] lg:hover:ml-3 duration-200 text-base">Harsh is student of Computer Engineering currently pursuing his second year of Bachelors from Vishwakarma Government Engineering College, Ahemedabad.He has fair skills on web-development and algorithm optimization.He has achieved notable results throughout his acedamic carrier. He wants to apply the education he has grasp over years into real life problems to benefit the organization and save time and efforts of people.</p>
+                <p class="p-4  lg:hover:scale-[105%] lg:hover:ml-3 duration-200 text-base">Harsh is student of Computer Engineering currently pursuing his second year of Bachelors from Vishwakarma Government
+                Engineering College, Ahemedabad. He has fair skills on web-development and algorithm optimization. He has achieved notable results throughout his academic carrier. He wants to apply the education he has grasp over years into real life
+                problems to benefit the organization and save time and efforts of people.</p>
                 <p class="p-4 lg:hover:text-xl duration-200 text-lg">okay that's my time ! See you again !</p>
             </div>
         </div>      
